@@ -1,0 +1,17 @@
+/* -----------------------------------------------------
+ * Import Pywal colors 
+ * ----------------------------------------------------- */
+ @import '../../../../../.cache/wal/colors-waybar.css';
+
+ @define-color backgroundlight #000000;
+ @define-color backgrounddark #000000;
+ @define-color workspacesbackground1 #000000;
+ @define-color workspacesbackground2 #222222;
+ @define-color bordercolor #000000;
+ @define-color textcolor1 #FFFFFF;
+ @define-color textcolor2 #FFFFFF;
+ @define-color textcolor3 #000000;
+ @define-color iconcolor #000000;
+ 
+ @import '../style.css';
+ 
